Updating Swagger templates (#787)
* Updating Swagger for documentation

* Updating 404 documentation
