# backend/api/app.py
@@ -141,7 +141,8 @@ def handle_exception(e) -> Response:
              any((rule.rule.startswith("/plugins"),
                   rule.rule.startswith("/shields"),
                   rule.rule.startswith("/categories"),
-                  rule.rule.startswith("/activity")))]
+                  rule.rule.startswith("/collections"),
+                  rule.rule.startswith("/metrics")))]
     links.sort()
     links = "\n".join(links)
     return app.make_response((f"Invalid Endpoint, valid endpoints are:\n{links}", 404,
